--- a/jogo/src/app/components/menu/menu.component.html
+++ b/jogo/src/app/components/menu/menu.component.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col-6">
         <button class="btn" (click)="abrirCriarArma(criarArma)">
-          <span class="btn__inner"><span class="btn__slide"></span><span class="btn__content">Criar personagem
+          <span class="btn__inner"><span class="btn__slide"></span><span class="btn__content">Criar Arma
         </span></span></button>
         <h3>Armas</h3>
        <!--  SELECT PARA ESCOLHER AS ARMAS
