--- a/jogo/src/app/components/menu/menu.component.html
+++ b/jogo/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="card caixa">
-  <img class="card-img-top" src="../../../assets/imagens/gif.gif" alt="Card image cap" style="height: 35vh;"><button class="btn" [routerLink]="['/Jogo']">
+  <img class="card-img-top" src="../../../assets/imagens/lagertha.gif" alt="Card image cap" style="height: 35vh;"><button class="btn" [routerLink]="['/Jogo']">
     <span class="btn__inner"><span class="btn__slide"></span><span class="btn__content">JOGAR
   </span></span></button>
   <div class="card-body">
